fixed graphic radio appearance on ie11

--- a/assets/css/admin.css
+++ b/assets/css/admin.css
@@ -632,10 +632,11 @@ input[type="radio"]:checked + .ev-radio:after { content: ""; width: 10px; height
 .ev-radio span { display: inline-block; font-size: 14px; line-height: 24px; }
 .ev-radio + .ev-radio { margin-top: 12px; }
 .ev-radio.ev-graphic-radio { float: left; clear: none; margin-right: 10px; margin-bottom: 10px; margin-top: 0; }
-.ev-radio.ev-graphic-radio:before, .ev-radio.ev-graphic-radio:after { display: none; }
-.ev-radio.ev-graphic-radio img { display: block; padding: 4px; border: 4px solid #DBDBDB; border-radius: 3px; -webkit-transition: border-color 0.2s ease; -moz-transition: border-color 0.2s ease; transition: border-color 0.2s ease; }
-.ev-radio.ev-graphic-radio:hover img { border-color: #B3B3B3; }
-input[type="radio"]:checked + .ev-radio.ev-graphic-radio img { border-color: #66CC66; }
+.ev-radio.ev-graphic-radio:before { position: absolute; top: 0; right: 0; bottom: 0; left: 0; border: 4px solid #DBDBDB; width: 100%; height: 100%; border-radius: 3px; margin-right: 0; z-index: 100; background-color: transparent; }
+.ev-radio.ev-graphic-radio:after { display: none; }
+.ev-radio.ev-graphic-radio img { display: block; padding: 8px; border-radius: 3px; -webkit-transition: border-color 0.2s ease; -moz-transition: border-color 0.2s ease; transition: border-color 0.2s ease; }
+.ev-radio.ev-graphic-radio:hover:before { border-color: #B3B3B3; }
+input[type="radio"]:checked + .ev-radio.ev-graphic-radio:before { border-color: #66CC66; background-color: transparent; }
 
 .ev-radio-style-switch { display: inline-block; position: relative; }
 .ev-radio-style-switch input[type="radio"]:checked + .ev-radio span { color: #fff; border-color: #66CC66; background-color: #66CC66; }
